--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,22 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase configuration files (contain sensitive API keys)
+**/google-services.json
+**/GoogleService-Info.plist
+**/firebase_options.dart
+
+# Environment files
+.env
+.env.local
+.env.production
+.env.staging
+
+# Keystore files
+**/key.properties
+**/*.keystore
+**/*.jks
+
+# Local configuration files
+local.properties
