--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ app.*.map.json
 **/google-services.json
 **/GoogleService-Info.plist
 **/firebase_options.dart
+**/firebase_options.template.dart
 
 # Environment files
 .env
